[project]
name = "multivision-ha"
version = "0.1.0"
description = "Integration for Multivision LED Controllers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "multivision@git+ssh://git@gitlab.im-en.com:60422/p00308_klubhaus/multivision-led.git",
]

[dependency-groups]
dev = [
    "homeassistant>=2025.3.4",
]
