[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "ha-led-controller"
version = "0.1.0"
description = "Homeassistant Integration for LED Controllers"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Intermediate Engineering GmbH", email = "info@im-en.com" } ]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "ledwallcontroller>=0.1",
]

[dependency-groups]
dev = [ "homeassistant==2025.4", "ruff>=0.11.2" ]

[tool.hatch.build.targets.wheel]
packages = [ "custom_components/ha-ledcontroller" ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py313"
